# Nails

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  migration-diagnostic.txt  web-auth-test-summary.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  client_models.py  config.py  db.py  feedback_models.py  main.py  models.py  models_preferences.py  web_auth_identity.py  web_auth_models.py  web_proxy.py
backend/scripts/: calibrate_pilot_catalog.py
backend/tests/: conftest.py  test_booking_catalog_snapshot_contract.py  test_booking_finalization_corrections.py  test_booking_recreation.py  test_catalog_activation_rollback_guard.py  test_catalog_batch_plugin.py  test_catalog_booking_composition.py  test_client_cards.py  test_client_contour.py  test_config.py  test_digest_long_absent.py  test_digest_sender_contract.py  test_feedback.py  test_health.py  test_landing_contract.py  test_landing_glam_contract.py  test_master_preferences.py  test_onboarding.py  test_onboarding_materialization.py  test_pilot_time_calibration.py  test_quantity_price_time_independence.py  test_scheduling_availability_preview.py  test_scheduling_catalog_replace.py  test_scheduling_catalog_snapshot.py  test_scheduling_dates_availability.py  test_scheduling_digest.py  test_scheduling_management.py  test_scheduling_open_by_default.py  test_scheduling_queries.py  test_scheduling_services.py  test_scheduling_writes.py  test_schema.py  test_service_addon_booking_guard.py  test_service_catalog_api.py  test_service_catalog_schema.py  (+39 more)
(+339 files in other folders)
